--- a/rn_face/CMakeLists.txt
+++ b/rn_face/CMakeLists.txt
@@ -1,57 +1,183 @@
-cmake_minimum_required(VERSION 2.4.6)
-include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
+cmake_minimum_required(VERSION 2.8.3)
+project(rn_face)
 
-# Set the build type.  Options are:
-#  Coverage       : w/ debug symbols, w/o optimization, w/ code-coverage
-#  Debug          : w/ debug symbols, w/o optimization
-#  Release        : w/o debug symbols, w/ optimization
-#  RelWithDebInfo : w/ debug symbols, w/ optimization
-#  MinSizeRel     : w/o debug symbols, w/ optimization, stripped binaries
-#set(ROS_BUILD_TYPE RelWithDebInfo)
-
-rosbuild_init()
-
-#set the default path for built executables to the "bin" directory
-set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
-#set the default path for built libraries to the "lib" directory
-set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
-
-#uncomment if you have defined messages
-rosbuild_genmsg()
-#uncomment if you have defined services
-#rosbuild_gensrv()
-
-#common commands for building c++ executables and libraries
-#rosbuild_add_library(${PROJECT_NAME} src/example.cpp)
-#target_link_libraries(${PROJECT_NAME} another_library)
-#rosbuild_add_boost_directories()
-#rosbuild_link_boost(${PROJECT_NAME} thread)
-#rosbuild_add_executable(example examples/example.cpp)
-#target_link_libraries(example ${PROJECT_NAME})
-rosbuild_add_executable(trans_skel src/trans_skel.cpp)
-rosbuild_add_executable(fdati src/fdati.cpp)
-rosbuild_add_executable(fdati_crop src/fdati_crop.cpp)
-rosbuild_add_executable(cap_img_d src/cap_img_d.cpp)
-rosbuild_add_executable(controller src/controller.cpp)
-rosbuild_add_executable(battery src/battery.cpp)
-rosbuild_add_executable(move_script src/move_script.cpp)
-
-rosbuild_add_compile_flags(fdati -std=gnu++0x )
-rosbuild_add_compile_flags(fdati_crop -std=gnu++0x )
-rosbuild_add_compile_flags(fdati -std=gnu++0x)
-rosbuild_add_compile_flags(fdati_crop -std=gnu++0x )
-rosbuild_add_compile_flags(trans_skel -std=gnu++0x )
-rosbuild_add_compile_flags(cap_img_d -std=gnu++0x)
-rosbuild_add_compile_flags(controller -std=gnu++0x)
-rosbuild_add_compile_flags(battery -std=gnu++0x)
-rosbuild_add_compile_flags(move_script -std=gnu++0x)
+## Find catkin macros and libraries
+## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
+## is used, also find other catkin packages
+find_package(catkin REQUIRED COMPONENTS
+  roscpp
+  rospy
+  sensor_msgs
+  std_msgs
+  nav_msgs
+  tf
+  image_transport
+  image_geometry
+  cv_bridge
+  catkin REQUIRED genmsg actionlib_msgs
+)
+#
+# System dependencies are found with CMake's conventions
+find_package(Boost REQUIRED COMPONENTS filesystem system)
+find_package(OpenCV REQUIRED)
 
 
-rosbuild_add_boost_directories()
-rosbuild_link_boost(fdati  filesystem system)
-rosbuild_link_boost(fdati_crop  filesystem system)
-rosbuild_link_boost(cap_img_d filesystem system)
-rosbuild_link_boost(trans_skel filesystem system)
-rosbuild_link_boost(controller filesystem system)
-rosbuild_link_boost(battery filesystem system)
-rosbuild_link_boost(move_script filesystem system)
+## Generate messages in the 'msg' folder
+add_message_files(
+   FILES
+   hcma.msg
+    hcm.msg
+     head_cords_m_array.msg
+      head_cords_m.msg
+ )
+generate_messages()
+
+## Generate services in the 'srv' folder
+# add_service_files(
+#   FILES
+#   Service1.srv
+#   Service2.srv
+# )
+
+## Generate actions in the 'action' folder
+# add_action_files(
+#   FILES
+#   Action1.action
+#   Action2.action
+# )
+
+## Generate added messages and services with any dependencies listed here
+# generate_messages(
+#   DEPENDENCIES
+#   std_msgs  # Or other packages containing msgs
+# )
+
+catkin_package(
+  INCLUDE_DIRS include
+#  LIBRARIES rn_face
+#  CATKIN_DEPENDS other_catkin_pkg
+#  DEPENDS system_lib
+)
+include_directories(include ${Boost_INCLUDE_DIRS} ${catkin_INCLUDE_DIRS} ${OpenCV_INCLUDE_DIRS})
+###########
+## Build ##
+###########
+
+## Specify additional locations of header files
+## Your package locations should be listed before other locations
+# include_directories(include)
+include_directories(
+  ${catkin_INCLUDE_DIRS}
+)
+## Specify additional locations of header files
+## Your package locations should be listed before other locations
+# include_directories(include)
+
+## Declare a cpp library
+# add_library(rn_face
+#   src/${PROJECT_NAME}/rn_face.cpp
+# )
+
+## Declare a cpp executable
+# add_executable(rn_face_node src/rn_face_node.cpp)
+add_executable(trans_skel src/trans_skel.cpp)
+set_target_properties(trans_skel PROPERTIES COMPILE_FLAGS  -std=gnu++0x)
+target_link_libraries(trans_skel
+    ${catkin_LIBRARIES}
+    ${Boost_LIBRARIES}
+)
+
+add_executable(fdati src/fdati.cpp)
+set_target_properties(fdati PROPERTIES COMPILE_FLAGS  -std=gnu++0x)
+target_link_libraries(fdati
+    ${catkin_LIBRARIES}
+    ${Boost_LIBRARIES}
+    ${OpenCV_LIBS}
+)
+
+add_executable(fdati_crop src/fdati_crop.cpp)
+set_target_properties(fdati_crop PROPERTIES COMPILE_FLAGS  -std=gnu++0x)
+target_link_libraries(fdati_crop
+    ${catkin_LIBRARIES}
+    ${Boost_LIBRARIES}
+    ${OpenCV_LIBS}
+)
+
+add_executable(fdc2 src/fdc2.cpp)
+set_target_properties(fdc2 PROPERTIES COMPILE_FLAGS  -std=gnu++0x)
+target_link_libraries(fdc2
+    ${catkin_LIBRARIES}
+    ${Boost_LIBRARIES}
+    ${OpenCV_LIBS}
+)
+
+add_executable(cap_img_d src/cap_img_d.cpp)
+set_target_properties(cap_img_d PROPERTIES COMPILE_FLAGS  -std=gnu++0x)
+target_link_libraries(cap_img_d
+    ${catkin_LIBRARIES}
+    ${Boost_LIBRARIES}
+    ${OpenCV_LIBS}
+)
+
+add_executable(controller src/controller.cpp)
+target_link_libraries(controller
+  ${catkin_LIBRARIES}
+  ${Boost_LIBRARIES}
+)
+
+## Add cmake target dependencies of the executable/library
+## as an example, message headers may need to be generated before nodes
+# add_dependencies(rn_face_node rn_face_generate_messages_cpp)
+
+## Specify libraries to link a library or executable target against
+# target_link_libraries(rn_face_node
+#   ${catkin_LIBRARIES}
+# )
+
+#############
+## Install ##
+#############
+
+# all install targets should use catkin DESTINATION variables
+# See http://ros.org/doc/api/catkin/html/adv_user_guide/variables.html
+
+## Mark executable scripts (Python etc.) for installation
+## in contrast to setup.py, you can choose the destination
+# install(PROGRAMS
+#   scripts/my_python_script
+#   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+# )
+
+## Mark executables and/or libraries for installation
+# install(TARGETS rn_face rn_face_node
+#   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+#   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+#   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+# )
+
+## Mark cpp header files for installation
+# install(DIRECTORY include/${PROJECT_NAME}/
+#   DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
+#   FILES_MATCHING PATTERN "*.h"
+#   PATTERN ".svn" EXCLUDE
+# )
+
+## Mark other files for installation (e.g. launch and bag files, etc.)
+# install(FILES
+#   # myfile1
+#   # myfile2
+#   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+# )
+
+#############
+## Testing ##
+#############
+
+## Add gtest based cpp test target and link libraries
+# catkin_add_gtest(${PROJECT_NAME}-test test/test_rn_face.cpp)
+# if(TARGET ${PROJECT_NAME}-test)
+#   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
+# endif()
+
+## Add folders to be run by python nosetests
+# catkin_add_nosetests(test)
